# C--test

./: readme.txt
cmakeMoudleTest/: CMakeLists.txt  README
cmakeMoudleTest/friendTest/: CMakeLists.txt  README  main.cpp
cmakeMoudleTest/friendTest/include/: box.h
cmakeMoudleTest/friendTest/src/: CMakeLists.txt  box.cpp
cmakeMoudleTest/inlineTest/: CMakeLists.txt  README  main.cpp
cmakeMoudleTest/inlineTest/include/: inline.h
cmakeMoudleTest/inlineTest/src/: CMakeLists.txt  inline.cpp
cmakeMoudleTest/streamTest/: CMakeLists.txt  data.txt  data1.txt  main.cpp  out1.txt
cmakeMoudleTest/streamTest/include/: streamUtil.h
cmakeMoudleTest/streamTest/src/: CMakeLists.txt  streamUtil.cpp
cmakeMoudleTest/threadTest/: CMakeLists.txt  README  main.cpp
cmakeMoudleTest/threadTest/include/: mythread.h
cmakeMoudleTest/threadTest/src/: CMakeLists.txt  mythread.cpp
helloWorld-C++/: CMakeLists.txt  README  main.cpp
helloWorld-C++/include/: animal.h
helloWorld-C++/src/: CMakeLists.txt  animal.cpp  human.cpp  human.h  testHead.cpp  testHead.h
pointerTest/: CMakeLists.txt  main.cpp
pointerTest/include/: pointer.h
pointerTest/src/: CMakeLists.txt  pointer.cpp
structTest/: CMakeLists.txt  README  main.cpp
structTest/include/: test.h
structTest/src/: CMakeLists.txt  test.cpp
